# ndx-photostim

./: .gitignore  LICENSE  LICENSE.txt  NEXTSTEPS.md  README.md  file_classes.py  file_defined_namespace.py  file_defined_test_extensions.ipynb  file_ext.ipynb  local_test.py  pyproject.toml  requirements.txt  run_test_events.py  setup.py  stim_table_test.py  test.extensions.yaml  test.namespace.yaml  test_dynamic_table.ipynb  test_extension.ipynb  test_file.py  test_new_data_type.ipynb  test_unit.py  tmp.py  tutorial.ipynb
PKL tests/: file_classes_PKL.py  file_defined_namespace_PKL.py  test.extensions.yaml  test.namespace.yaml  test_file_PKL.py  test_unit.py
PKL_tests/: file_classes_PKL.py  file_defined_namespace_PKL.py  test.extensions.yaml  test_unit.py
api_docs/: README.md
api_docs/source/: conf.py  index.rst  ndx_photostim.rst  tests.example_use.rst  tests.integration.rst  tests.rst  tests.unit.rst
api_documentation/: README.md
api_documentation/source/: conf.py  file_classes.rst  file_defined_namespace.rst  index.rst  modules.rst  ndx_photostim.rst  test_file.rst  tests.integration.rst  tests.rst  tests.unit.rst
archive/: file_classes.py  file_defined_namespace.py  file_defined_test_extensions.ipynb  file_ext.ipynb  tmp.py  tmp2.py  unit_test_notebook.ipynb
docs/source/: conf.py  conf_doc_autogen.py  credits.rst  description.rst  format.rst  index.rst
old/: test_file.py
old/PKL_tests/: file_classes_PKL.py  file_defined_namespace_PKL.py  test_file_PKL.py  test_unit.py
spec/: ndx-photostim.extensions.yaml  ndx-photostim.namespace.yaml
(+27 files in other folders)
